--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,8 +4,8 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  server_name test.seiue.com;
-  root /home/seiue/CODE/yxtimes/;
+  server_name www.yxtimes.org;
+  root /home/bdfz/code/yxtimes/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
