--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  server_name www.yxtimes.org;
+  server_name yxtimes.org;
   root /home/bdfz/code/yxtimes/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
