--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,8 +3,8 @@ upstream unicorn {
 }
 
 server {
-  listen 80 default deferred;
-  server_name yxtimes.org;
+  listen 80;
+  server_name yxtimes.org www.yxtimes.org;
   root /home/bdfz/code/yxtimes/public;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
